--- a/css/index.css
+++ b/css/index.css
@@ -66,6 +66,23 @@ body {
     background-image: url(../images/bg.png);
     background-size: 100% 100%;
 }
+.p{
+    width:6.52rem;
+    height:1.46rem;
+    position: absolute;
+    top:2.4rem;
+    left: 50%;
+    margin-left: -3.21rem;
+}
+.p img{
+    width: 100%;
+    height: 100%;
+}
+.p span{
+    position: absolute;
+    right: 0.6rem;
+    top: 0.4rem;
+}
 .answerbg{
     width: 6.7rem;
     height:7.1rem;
@@ -75,6 +92,10 @@ body {
     left: 50%;
     margin-left: -3.35rem;
     top:3.84rem;
+}
+.bg>div>span{
+    font-family: haibao;
+    font-size: 0.32rem;
 }
 .que{
     width:6.4rem;
@@ -95,6 +116,7 @@ body {
     height: 0.82rem;
     animation: myfirst 3s linear infinite;
 }
+
 @keyframes myfirst {
     0% {
         opacity: 0.5;
@@ -113,26 +135,6 @@ body {
         transform: translateY(0);
     }
 }
-.p{
-    width:6.52rem;
-    height:1.46rem;
-    position: absolute;
-    top:2.4rem;
-    left: 50%;
-    margin-left: -3.21rem;
-}
-.p img{
-    width: 100%;
-    height: 100%;
-}
-.p span{
-    font-family: haibao;
-    font-size: 0.32rem;
-    position: absolute;
-    right: 0.6rem;
-    top: 0.4rem;
-}
-
 .answerbg .answer{
     text-align: center; 
     margin-top: 1.6rem;
@@ -168,8 +170,6 @@ button div{
     top: 0rem;
     display: none;
 }
-
-
 .que2{
     background:url(../images/xingbie.png) no-repeat center;
     background-size: 5rem 0.8rem;
@@ -206,13 +206,12 @@ button div{
     top: 1.15rem;
     left: 0.97rem;
 }
-.que3 span{
-    font-family: haibao;
-    font-size: 0.32rem;
+.que3 span,.que4 span,.que5 span{
     position: absolute;
     right: 0.6rem;
     bottom: 0.75rem;
 }
+
 .que4{
     width:6.76rem;
     height:3.36rem;
@@ -229,13 +228,6 @@ button div{
     position: absolute;
     top: 0.8rem;
     right: 1.4rem;
-}
-.que4 span,.que5 span{
-    font-family: haibao;
-    font-size: 0.32rem;
-    position: absolute;
-    right: 0.6rem;
-    bottom: 0.75rem;
 }
 .que5{
     width:6.96rem;
@@ -281,8 +273,6 @@ button div{
     right: 0.7rem;
 }
 .que6 span{
-    font-family: haibao;
-    font-size: 0.32rem;
     position: absolute;
     right: 0.6rem;
     bottom: 0.75rem;
@@ -307,10 +297,8 @@ button div{
     animation: myfourth 4s linear infinite;
 }
 .que7 span{
-    font-family: haibao;
-    font-size: 0.32rem;
     position: absolute;
-    right: 0.6rem;
+    right: 0.68rem;
     bottom: 0.75rem;
 }
 .que8{
@@ -340,8 +328,6 @@ button div{
     right:0;
 }
 .que8 span{
-    font-family: haibao;
-    font-size: 0.32rem;
     position: absolute;
     right: 0.8rem;
     bottom: 0.75rem;
@@ -364,8 +350,6 @@ button div{
     background-size: 100% 100%;
 }
 .que9 span{
-    font-family: haibao;
-    font-size: 0.32rem;
     position: absolute;
     right: 0.65rem;
     bottom: 0.75rem;
