--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@ html, body {
     height: 100%;
 }
 body {
-    background: #eee;
+    // background: #eee;
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
     color:#000;
     margin: 0 auto;
@@ -23,7 +23,7 @@ body {
     height: 100%;
 }
 .swiper-slide {
-    background: #fff;
+    // background: #fff;
     /* Center slide text vertically */
     display: -webkit-box;
     display: -ms-flexbox;
@@ -38,6 +38,10 @@ body {
     -webkit-align-items: center;
     align-items: center;
 }
+.bg>div>span{
+    font-family: haibao;
+    font-size: 0.32rem;
+}
 .up {
     position: absolute;
     width: 0.74rem;
@@ -48,19 +52,6 @@ body {
     animation: moveUp 1.5s linear infinite;
     -webkit-animation: moveUp 1.5s linear infinite;
 }
-@keyframes moveUp {
-    0% {}
-    100% {
-        transform: translateY(100%);
-    }
-}
-@-webkit-keyframes moveUp {
-    0% {}
-    100% {
-        -webkit-transform: translateY(100%);
-    }
-}
-
 .bg{
     position: relative;
     background-image: url(../images/bg.png);
@@ -93,19 +84,16 @@ body {
     margin-left: -3.35rem;
     top:3.84rem;
 }
-.bg>div>span{
-    font-family: haibao;
-    font-size: 0.32rem;
-}
 .que{
+    
+}
+.que1{
     width:6.4rem;
     height:1.58rem;
     position: absolute;
     top:0.8rem;
     left: 50%;
     margin-left: -3.2rem; 
-}
-.que1{
     background: url(../images/age.png) no-repeat center;
     background-size: 100% 100%;
     text-align: center;
@@ -160,7 +148,9 @@ body {
 .two button{
     margin:0 auto 0.3rem auto; 
 }
-
+.answer6 button{
+    margin:0 auto 0.3rem auto; 
+}
 button div{
     width: 100%;
     height: 0.85rem;
@@ -171,15 +161,25 @@ button div{
     display: none;
 }
 .que2{
-    background:url(../images/xingbie.png) no-repeat center;
-    background-size: 5rem 0.8rem;
-    text-align: center;  
+    width:6.61rem;
+    height:3.07rem;
+    position: absolute;
+    top:0.78rem;
+    left: 50%;
+    margin-left: -3.3rem; 
+    background:url(../images/2_xingbie.png) no-repeat center;
+    background-size:100% 100%;
 }
 .que2 img{
-    width: 6.54rem;
-    height: 1.69rem;
-    margin-top: -0.25rem;
-    animation: mysec 3s linear infinite;
+    width: 2.88rem;
+    height: 1.31rem;
+    margin-top: 0.26rem;
+    // animation: mysec 0.5s linear infinite;
+}
+.que2 span,.que3 span,.que4 span,.que5 span{
+    position: absolute;
+    right: 0.6rem;
+    bottom: 0.75rem;
 }
 .answer2 .boy{
     width:80%;
@@ -206,12 +206,6 @@ button div{
     top: 1.15rem;
     left: 0.97rem;
 }
-.que3 span,.que4 span,.que5 span{
-    position: absolute;
-    right: 0.6rem;
-    bottom: 0.75rem;
-}
-
 .que4{
     width:6.76rem;
     height:3.36rem;
@@ -236,7 +230,7 @@ button div{
     top:0.87rem;
     left: 50%;
     margin-left: -3.48rem; 
-    background:url(../images/5qudao.png) no-repeat center;
+    background:url(../images/5_qudao.png) no-repeat center;
     background-size: 100% 100%;
     text-align: center; 
 }
@@ -254,7 +248,7 @@ button div{
     top:0.84rem;
     left: 50%;
     margin-left: -3.38rem; 
-    background:url(../images/6yusuan.png) no-repeat center;
+    background:url(../images/6_yusuan.png) no-repeat center;
     background-size: 100% 100%;
     text-align: center; 
 }
@@ -277,6 +271,7 @@ button div{
     right: 0.6rem;
     bottom: 0.75rem;
 }
+
 .que7{
     width:7rem;
     height:3rem;
@@ -284,7 +279,7 @@ button div{
     top:0.84rem;
     left: 50%;
     margin-left: -3.5rem; 
-    background:url(../images/7jigeyue.png) no-repeat center;
+    background:url(../images/7_jigeyue.png) no-repeat center;
     background-size: 100% 100%;
     text-align: center; 
 }
@@ -365,15 +360,27 @@ button div{
     font-size: 0.32rem;
     font-family: haibao;
 }
+@keyframes moveUp {
+    0% {}
+    100% {
+        transform: translateY(100%);
+    }
+}
+@-webkit-keyframes moveUp {
+    0% {}
+    100% {
+        -webkit-transform: translateY(100%);
+    }
+}
 @keyframes mysec {
     0% {
-        opacity: 1;
+        transform: scale(1,1);
     }
     50% {
-        opacity: 0.5;
+        transform: scale(1.1,1.1);
     }
     100% {
-        opacity:1;
+        transform: scale(1,1);
     }
 }
 @keyframes myfourth {
@@ -415,10 +422,15 @@ button div{
 }
 .re{
     position: relative;
-    background: url(../images/result_lv.png);
-    background-size: 100% 100%;
+    // background: url(../images/result_lv.png);
+    // background-size: 100% 100%;
+    width: 100%;
+    height: 100%;
 }
-
+.re img{
+    width: 100%;
+    height: 100%;
+}
 .re .result{
     position: absolute;
     left:5.8rem;
@@ -427,7 +439,6 @@ button div{
     font-family: qianming;
     font-size: 0.32rem;
 }
-
 .re button{
     width: 1.68rem;
     height: 0.54rem;
@@ -440,4 +451,10 @@ button div{
     border-radius: 0.25rem;
     color: #fff;
     font-size: 0.32rem;
+}
+canvas{
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin-left: -111px;
 }
